# flax

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .travis.yml  CHANGELOG.md  README.md  contributing.md  jax_utils.py  launch_vm.sh  mypy.ini  nnx.py  optim.py  pyink.toml  pylintrc  pyproject.toml  pyrefly.toml  pytest.ini  pytype.cfg  requirements.txt  run_jax.sh  setup.cfg  setup.py  struct.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md
.github/analytics/: README.md  get_repo_metrics.py  issue_activity_since_date.gql  pr_data_query.gql  requirements.txt
.github/workflows/: apply-howto-branches.yml  build.yml  flax_publish.yml  flax_test.yml  flaxlib_publish.yml  jax_nightly.yml  pythonpublish.yml  pythontest.yml
benchmarks/: README.md  nnx_graph_overhead.py  nnx_mlpmixer_training.py  nnx_simple_training.py  nnx_state_traversal.py
benchmarks/tracing/: README.md  gemma.py  imagenet.py  lm1b.py  mnist.py  nlp_seq.py  ogbg_molpcba.py  ppo.py  run_all_benchmarks.sh  seq2seq.py  sst2.py  tracing_benchmark.py  vae.py  wmt.py
design_test/: attention_simple.py  auto_encoder.py  batch_norm.py  big_resnets.py  dense.py  flow.py  linen_attention_simple.py  mlp.py  resnet.py  scan.py  tied_autoencoder.py  transformer.py  transformer_simple.py  vmap.py  weight_std.py
design_test/linen/: attention_simple.py  autoencoder.py  dense.py  mlp_three_forms.py  simple_train_loop.py  tied_autoencoder.py  weight_std.py
dev/: README.md  update_requirements.py
dev/.devcontainer/: Dockerfile  devcontainer.json
docs/: .gitignore  .readthedocs.yaml  Makefile  README.md  annotated_mnist.md  code_snippets.ipynb  code_snippets.md  conf.py  conf_sphinx_patch.py  contributing.md  examples.rst  examples_community_examples.rst  examples_core_examples.rst  examples_google_research_examples.rst  examples_repositories_that_use_flax.rst  faq.md  faq.rst  flax.config.rst  flax.core.frozen_dict.rst  flax.errors.rst  flax.jax_utils.rst  flax.linen.rst  flax.nn.rst  flax.optim.rst  flax.rst  flax.serialization.rst  flax.struct.rst  flax.training.rst  flax.traverse_util.rst  format_howtos.py  getting_started.ipynb  getting_started.md  getting_started.rst  glossary.rst  howto.checkpointing.rst  howto.distributed-training.rst  howto.ensembling.rst  howto.polyak-averaging.rst  howto.scheduled-sampling.rst  howtos-howto.md  (+15 more)
docs/_ext/: codediff.py  codediff_test.py  flax_module.py
docs/_formatted_howtos/: howto-distributed-training.diff.html  howto-ensembling.diff.html  howto-polyak-averaging.diff.html
docs/advanced_topics/: arguments.md  contributing.md  convert_pytorch_to_flax.rst  index.rst  lift.md  linen_upgrade_guide.rst  module_lifecycle.rst  optax_update_guide.rst
docs/api_reference/: flax.config.rst  flax.core.frozen_dict.rst  flax.cursor.rst  flax.errors.rst  flax.linen.rst  flax.traceback_util.rst  flax.training.rst  flax.traverse_util.rst  index.rst
docs/deprecated_howtos/: checkpointing.rst  ensembling.rst  howtos-howto.md  scheduled-sampling.rst
docs/design_notes/: arguments.md  design_notes.rst  lift.md  linen_design_principles.rst  module_lifecycle.rst  setup_or_nncompact.rst
docs/developer_notes/: index.rst  lift.md  module_lifecycle.rst
docs/examples/: community_examples.rst  generative-models.rst  graph-neural-networks.rst  image-classification.rst  index.rst  rnns.rst  transformer-models.rst
docs/experimental/: index.rst
docs/flip/: 0000-template.md  1009-optimizer-api.md  1436-interceptor.md  1503-modular-training-loop.md  1777-default-dtype.md  2396-rnn.md  2434-general-metadata.md  3099-rnnbase-refactor.md  4105-jax-style-nnx-transforms.md  README.md
docs/guides/: arguments.md  batch_norm.rst  convert_pytorch_to_flax.rst  dropout.rst  ensembling.rst  extracting_intermediates.rst  flax_basics.ipynb  flax_basics.md  flax_on_pjit.ipynb  flax_on_pjit.md  flax_sharp_bits.ipynb  flax_sharp_bits.md  full_eval.rst  haiku_migration_guide.rst  index.rst  index_converting_and_upgrading.rst  index_data_preprocessing.rst  index_model_inspection.rst  initializers.ipynb  initializers.md  (+21 more)
docs_nnx/: .readthedocs.yaml  README.md  conf.py  conf_sphinx_patch.py  contributing.md  glossary.rst  guides_advanced.rst  guides_basic.rst  index.rst  key_concepts.ipynb  key_concepts.md  linen_intro.ipynb  linen_intro.md  mnist_tutorial.ipynb  mnist_tutorial.md  nnx_basics.ipynb  nnx_basics.md  nnx_basics_tree.ipynb  nnx_basics_tree.md  nnx_glossary.rst  quick_start.ipynb  robots.txt  sharp_bits.ipynb  why.rst
examples/: README.md  __init__.py  digits_diffusion_model.ipynb  digits_diffusion_model.md  requirements.txt
flax/: __init__.py  config.py  configurations.py  cursor.py  debugging.py  error_handlers.py  errors.py  ids.py  io.py  jax_utils.py  optim.py  pooling.py  serialization.py  struct.py  traceback_util.py  traverse_util.py  typing.py  version.py
flax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flaxlib/: Cargo.toml  README.md  pyproject.toml
flaxlib/flaxlib/: __init__.py  flaxlib.pyi
flaxlib/src/: lib.rs
flaxlib_src/: CMakeLists.txt  Cargo.toml  flaxlib.pyi  meson.build  pyproject.toml
flaxlib_src/src/: lib.cc
flaxlib_src/src/flaxlib/: __init__.py  flaxlib_cpp.pyi
flip/: README.md
howtos/: README.md  create_new_howto.sh
linen_examples/: README.md  failing_example.py  requirements.txt
metrics/: tensorboard.py
nn/: __init__.py  base.py  linear.py  normalization.py  pooling.py  recurrent.py
nodes/: lift.md
tests/: checkpoints_test.py  colab_tpu_jax_version.ipynb  configurations_test.py  cursor_test.py  download_dataset_metadata.sh  early_stopping_test.py  exceptions_pickle_test.py  flaxlib_test.py  import_test.ipynb  io_test.py  jax_utils_test.py  linen_test.py  nn_attention_test.py  nn_linear_test.py  nn_test.py  optim_test.py  pickle_test.py  plib.sh  pooling_test.py  run_all_tests.sh  serialization_test.py  struct_test.py  tensorboard_test.py  traceback_util_test.py  traverse_util_test.py
(+1372 files in other folders)
