[build-system]
requires = ['meson-python']
build-backend = 'mesonpy'

[project]
name = "flaxlib"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
